postgresql-common (56) unstable; urgency=low

  * debian/init.d-functions, status(): Exit with code 3 if any cluster is
    down, to get a bit closer to LSB specification (which does not
    sufficiently specify the case of controlling multiple processes in one
    init script). Thanks to Ross Boylan <RossBoylan@stanfordalumni.org>!
    Closes: #358152

 -- Martin Pitt <mpitt@debian.org>  Mon,  5 Jun 2006 18:41:54 +0200

postgresql-common (55) unstable; urgency=low

  * Add missing procps dependency to p-common. Closes: #369768
  * pg_dropcluster: Clean up half-existing broken cluster configurations
    (which happen when disk becomes full, etc) instead of failing. (part of
    bug #368335).
  * t/030_errors.t: Test that pg_dropcluster copes with broken cluster
    configurations.
  * debian/maintscripts-functions: Do not fail package installation if
    pg_createcluster fails (/var might be full and the admin might want to use
    a different directory). Merely print out an error message and point to
    pg_createcluster and its manpage. (part of bug #368335)
  * t/030_errors.t: Create a temporary 10 MB loop mount on /var/lib/postgresql
    and check that pg_createcluster fails with an appropriate error and leaves
    no cruft behind.
  * pg_createcluster: Call pg_dropcluster to clean up cruft if anything fails
    in the cluster creation process. This avoids an inconsistent system if e.
    g. running out of disk space during installation. Closes: #368335

 -- Martin Pitt <mpitt@debian.org>  Fri,  2 Jun 2006 00:17:07 +0200

postgresql-common (54) unstable; urgency=low

  * pg_wrapper: Support specifying remote clusters with $PGCLUSTER, --cluster,
    user_clusters, and ~/.postgresqlrc with 'host:[port]' as cluster name.
    Closes: #340162
  * t/090_multicluster.t: Add tests for above feature.
  * user_clusters.5, postgresqlrc.5: Document format for remote clusters.
  * debian/supported-versions:
    - Also recognize Ubuntu dapper version number '6.06LTS'.